# CMP2204

./: .gitignore  BDK_README.md  README.md  pyproject.toml
p2chat/: __main__.py  chatInitiator.py  chatResponder.py  peerDiscovery.py  serviceAnnouncer.py
p2chat/ui/: p2chat.css  tui.py
p2chat/ui/widgets/: ChangeName.py  LogDisplay.py  MessageMenu.py  SearhForIp.py  Sidebar.py
p2chat/util/: announce.py  classes.py  encryption.py  history.py  peer_discovery.py
